<resources>
    <!-- Global -->
    <string name="app_name" translatable="false">Gimme Pictures</string>
    <string name="unsplash_join_url" translatable="false">https://unsplash.com/join</string>
    <string name="delete">Delete</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="unsplash_add_photo_authorized_url" translatable="false">https://unsplash.com/submit</string>
    <string name="unsplash_add_photo_unauthorized_url" translatable="false">https://unsplash.com/?modal=%7B%22tag%22%3A%22Login%22%2C%22value%22%3A%7B%22tag%22%3A%22SubmitAPhoto%22%2C%22value%22%3A%7B%7D%7D%7D</string>
    <string name="photos">Photos</string>
    <string name="collections">Collections</string>
    <string name="account">Account</string>
    <string name="account_and_settings">Account and settings</string>
    <string name="users">Users</string>
    <string name="search">Search</string>
    <string name="retry">Retry</string>
    <string name="list_footer_load_error">Load error, check connection</string>
    <string name="open_with">Open with…</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="done">Done</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="failed_to_write_to_file">Failed to write to file</string>

    <!--Photo fragment-->
    <string name="add_photo">Add photo</string>
    <string name="sort_by">Sort by</string>
    <string name="order_latest">Latest</string>
    <string name="order_oldest">Oldest</string>
    <string name="order_popular">Popular</string>

    <!--Photo details-->
    <string name="photo">Photo</string>
    <string name="photo_details">Photo details</string>
    <string name="see_photo_info">See photo info</string>
    <string name="location_template" translatable="false">%s, %s</string>
    <string name="open_in_browser">Open in browser</string>
    <string name="share">Share</string>
    <string name="camera">Camera</string>
    <string name="aperture">Aperture</string>
    <string name="unknown">Unknown</string>
    <string name="focal_length">Focal length</string>
    <string name="shutter_speed">Shutter speed</string>
    <string name="exposure_time">Exposure time</string>
    <string name="iso" translatable="false">ISO</string>
    <string name="resolution">Resolution</string>
    <string name="like">Like</string>
    <string name="download">Download</string>
    <string name="save">Save</string>
    <string name="gmaps_does_not_installed">Google Maps does not installed on this device</string>

    <!--Collection-->
    <string name="curated_by">curated by</string>
    <string name="collection_details">Collection details</string>
    <string name="edit_collection">Edit collection</string>
    <string name="create_collection">Create</string>
    <string name="add_to_collection">Add to collection</string>
    <string name="make_private">Make private</string>
    <string name="collection_name_hint">Name</string>
    <string name="collection_description_hint">Description (optional)</string>
    <string name="collection_name_required">Enter collection name</string>

    <!--User details-->
    <string name="user_details">User details</string>
    <string name="user_photo">User photo</string>
    <string name="user_liked_photos">Liked photos</string>
    <string name="edit_profile">Edit profile</string>
    <string name="show_profile">Show profile</string>
    <string name="likes">Likes</string>
    <string name="user_more_info">More info</string>
    <string name="user_no_photos">User has no uploaded photos yet</string>
    <string name="user_no_liked_photos">User has no liked photos yet</string>
    <string name="user_no_collections">User has no collections yet</string>

    <!--Edit my profile-->
    <string name="username_hint">Username</string>
    <string name="username_description_text">(Only letters, numbers and underscores)</string>
    <string name="first_name_hint">First name</string>
    <string name="last_name_hint">Last name</string>
    <string name="email_hint">Email</string>
    <string name="portfolio_hint">Personal site/portfolio</string>
    <string name="instagram_username_hint">Instagram username</string>
    <string name="location_hint">Location</string>
    <string name="bio_hint">Bio</string>
    <string name="invalid_email">Enter a valid email</string>

    <!--Authorization-->
    <string name="add_account">Add account</string>
    <string name="user_authorization_title">Authorization</string>
    <string name="join">Join</string>
    <string name="login">Login</string>
    <string name="add_account_hint">Add an account to use all features of Gimme Pictures</string>
    <string name="logout">Logout</string>
    <string name="logout_confirmation">Are you sure want to logout?</string>
    <string name="login_prompt">Please login to %s</string>
    <string name="like_photo">like photo</string>
    <string name="save_photo">save photo</string>
    <string name="login_successful">Login successful</string>
    <string name="login_failed">Login failed</string>
    <string name="welcome_msg">Welcome! Login to use all features of Gimme pictures</string>

    <!-- Search -->
    <string-array name="search_category_array">
        <item>Photos</item>
        <item>Collections</item>
        <item>Users</item>
    </string-array>
    <string name="apply">Apply</string>
    <string name="search_for">Search for:</string>
    <string name="nothing_found">Hmm, seems like it\'s nothing here.\nTry to search something</string>
    <string name="no_search_results_subtitle">Try searching for something</string>

    <string name="filter">Filter</string>
    <string name="filter_photos">Photos filter</string>
    <string name="filter_relevance">Relevance</string>
    <string name="filter_latest">Latest</string>
    <string name="content_filter">Content Filter</string>
    <string name="filter_low">Low</string>
    <string name="filter_high">High</string>
    <string name="orientation">Orientation</string>
    <string name="filter_any">Any</string>
    <string name="filter_portrait">Portrait</string>
    <string name="filter_landscape">Landscape</string>
    <string name="filter_square">Square</string>
    <string name="filter_color">Color</string>
    <string name="filter_color_any">Any</string>
    <string name="filter_color_black_white">Black and white</string>
    <string name="filter_color_black">Black</string>
    <string name="filter_color_white">White</string>
    <string name="filter_color_yellow">Yellow</string>
    <string name="filter_color_orange">Orange</string>
    <string name="filter_color_red">Red</string>
    <string name="filter_color_purple">Purple</string>
    <string name="filter_color_magenta">Magenta</string>
    <string name="filter_color_green">Green</string>
    <string name="filter_color_teal">Teal</string>
    <string name="filter_color_blue">Blue</string>

    <!--Notification related-->
    <string name="download_notification_channel_name">Downloads</string>
    <string name="download_notification_channel_description">All download notifications to be appeared here</string>

    <!--Download feature-->
    <string name="download_complete">Download complete</string>
    <string name="download_error">Download error</string>
    <string name="cancel">Cancel</string>
    <string name="select_image_quality">Select image size</string>
    <string name="image_size_raw">Raw size</string>
    <string name="image_size_full">Full size</string>
    <string name="image_size_regular">Regular size</string>
    <string name="image_size_small">Small size</string>
    <string name="image_size_thumb">Thumb size</string>

    <!--File related-->
    <string name="file_exists_title">File already exists</string>
    <string name="file_exists_msg">Would you like to download it one more time?</string>

    <!--Settings-->
    <string name="settings_quality">Image quality</string>
    <string name="settings_appearance">Appearance</string>
    <string name="clear_cache">Clear cache</string>
    <string name="cache_size">Cache size: %d MB</string>
    <string name="theme">Theme</string>

    <!--Quality-->
    <string-array name="quality_options">
        <item>@string/image_size_raw</item>
        <item>@string/image_size_full</item>
        <item>@string/image_size_regular</item>
        <item>@string/image_size_small</item>
        <item>@string/image_size_thumb</item>
    </string-array>
    <string-array name="quality_values">
        <item>raw</item>
        <item>full</item>
        <item>regular</item>
        <item>small</item>
        <item>thumb</item>
    </string-array>
    <string name="default_load_quality_value" translatable="false">regular</string>

    <!--Theme-->
    <string name="theme_light">Light</string>
    <string name="theme_dark">Dark</string>
    <string name="theme_system_default">System default</string>
    <string-array name="theme_options">
        <item>@string/theme_light</item>
        <item>@string/theme_dark</item>
        <item>@string/theme_system_default</item>
    </string-array>
    <string-array name="theme_values" translatable="false">
        <item>light</item>
        <item>dark</item>
        <item>system</item>
    </string-array>
    <string name="default_theme_value" translatable="false">system</string>

</resources>