<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:padding="@dimen/indent_24dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/indent_8dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/sort_by"
            android:textSize="16sp" />

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/order_by_toggle_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/indent_16dp"
            app:selectionRequired="true"
            app:singleSelection="true">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/order_relevance_button"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="@dimen/indent_0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/filter_relevance" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/order_latest_button"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="@dimen/indent_0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/filter_latest" />
        </com.google.android.material.button.MaterialButtonToggleGroup>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/content_filter_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/indent_8dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/content_filter"
            android:textSize="16sp" />

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/content_filter_toggle_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/indent_16dp"
            app:selectionRequired="true"
            app:singleSelection="true">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/content_filter_low_button"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="@dimen/indent_0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/filter_low" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/content_filter_high_button"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/filter_high" />
        </com.google.android.material.button.MaterialButtonToggleGroup>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/color_filter_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/indent_8dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/filter_color"
            android:textSize="16sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/color_filter_dropdown_menu"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/indent_16dp"
            app:boxStrokeColor="@color/indigo_200"
            app:boxStrokeWidth="@dimen/indent_1dp"
            app:boxStrokeWidthFocused="@dimen/indent_1dp">

            <AutoCompleteTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                tools:ignore="LabelFor" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/orientation_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/indent_8dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/orientation"
            android:textSize="16sp" />

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/orientation_toggle_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/indent_16dp"
            app:selectionRequired="true"
            app:singleSelection="true">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/orientation_any_button"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton.IconOnly"
                android:layout_width="@dimen/indent_0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/filter_any" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/orientation_portrait_button"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton.IconOnly"
                android:layout_width="@dimen/indent_0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:icon="@drawable/ic_portrait" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/orientation_landscape_button"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton.IconOnly"
                android:layout_width="@dimen/indent_0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:icon="@drawable/ic_landscape" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/orientation_square_button"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton.IconOnly"
                android:layout_width="@dimen/indent_0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:icon="@drawable/ic_square" />
        </com.google.android.material.button.MaterialButtonToggleGroup>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/apply_button"
            style="@style/GimmePictures.MaterialButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/apply" />
    </LinearLayout>

</androidx.core.widget.NestedScrollView>