<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.search.SearchFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:stateListAnimator="@null">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimaryVariant"
            app:layout_scrollFlags="scroll|enterAlways|snap">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/search_text_input_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxStrokeWidth="@dimen/indent_0dp"
                app:boxStrokeWidthFocused="@dimen/indent_0dp"
                app:endIconMode="clear_text"
                app:hintEnabled="false">

                <androidx.appcompat.widget.AppCompatEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:gravity="center_vertical"
                    android:hint="@string/search"
                    android:imeOptions="actionSearch"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>

        </com.google.android.material.appbar.MaterialToolbar>

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/search_for_toggle_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/indent_4dp"
            app:selectionRequired="true"
            app:singleSelection="true">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/toggle_photos"
                style="@style/GimmePictures.Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="@dimen/indent_0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/photos" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/toggle_collections"
                style="@style/GimmePictures.Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="@dimen/indent_0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="end"
                android:text="@string/collections" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/toggle_users"
                style="@style/GimmePictures.Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="@dimen/indent_0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/users" />

        </com.google.android.material.button.MaterialButtonToggleGroup>

    </com.google.android.material.appbar.AppBarLayout>

    <include
        android:id="@+id/search_photos_listing_layout"
        layout="@layout/listing_layout" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fab_filter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|bottom"
        android:layout_margin="@dimen/indent_16dp"
        android:contentDescription="@string/sort_by"
        android:text="@string/filter"
        app:icon="@drawable/ic_sort" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>