<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.PhotoSearchFragment">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_nothing_found"
                style="@style/TextAppearance.MaterialComponents.Subtitle2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:drawablePadding="@dimen/indent_8dp"
                android:gravity="center"
                android:text="@string/nothing_found"
                android:visibility="invisible"
                app:drawableTopCompat="@drawable/ic_nothing_found"
                tools:visibility="visible" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_view_error"
                style="@style/TextAppearance.MaterialComponents.Subtitle2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:drawablePadding="@dimen/indent_8dp"
                android:gravity="center"
                android:text="@string/list_footer_load_error"
                android:visibility="invisible"
                app:drawableTopCompat="@drawable/ic_no_internet_connection"
                tools:visibility="invisible" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
        </FrameLayout>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fab_filter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|bottom"
        android:layout_margin="@dimen/indent_16dp"
        android:contentDescription="@string/sort_by"
        android:text="@string/filter"
        app:icon="@drawable/ic_sort" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>